RESOLVED FIXED232572
[macOS] Opening local html files is failing
https://bugs.webkit.org/show_bug.cgi?id=232572
Summary [macOS] Opening local html files is failing
Per Arne Vollan
Reported 2021-11-01 10:58:35 PDT
On some macOS versions, opening local html files is failing.
Attachments
Patch (2.95 KB, patch)
2021-11-01 11:09 PDT, Per Arne Vollan
bfulgham: review+
ews-feeder: commit-queue-
Patch (2.89 KB, patch)
2021-11-01 12:47 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2021-11-01 10:59:03 PDT
Per Arne Vollan
Comment 2 2021-11-01 11:09:56 PDT
Brent Fulgham
Comment 3 2021-11-01 11:11:53 PDT
Comment on attachment 442996 [details] Patch r=me
Per Arne Vollan
Comment 4 2021-11-01 12:47:14 PDT
Per Arne Vollan
Comment 5 2021-11-01 13:59:19 PDT
Comment on attachment 443002 [details] Patch Thanks for reviewing!
EWS
Comment 6 2021-11-01 14:04:52 PDT
Committed r285130 (243769@main): <https://commits.webkit.org/243769@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 443002 [details].
Note You need to log in before you can comment on or make changes to this bug.